Fix contrast text ratio

--- a/source/assets/stylesheets/_global.scss
+++ b/source/assets/stylesheets/_global.scss
@@ -1,6 +1,6 @@
 body {
   background-color: $light-gray;
-  color: $medium-gray;
+  color: $dark-gray;
 }
 
 .delete-me {
